[package]
name = "keygraph-rs"
version = "0.1.0"
authors = ["Daniel McKenna <danielmckenna93@gmail.com>"]
description = "A library to generate keyboard adjacency graphs with petgraph"
repository = "https://github.com/xd009642/keygraph-rs"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
lazy_static = "0.2"
petgraph = "0.4.4"
